# omnidirectional-2realsense-SLAM

./: .gitignore  README.md  rviz.config.rviz
AVATAR/: CMakeLists.txt  nodelet_plugins.xml  package.xml
AVATAR/calibration/: calib031222070754.yaml  calib032622070217.yaml  calib032622071316.yaml  calib032622074257.yaml
AVATAR/include/ImageProcessing/: ImageProcessing.h
AVATAR/launch/: multicamera.launch
AVATAR/src/: ImageProcessing.cpp
IH2Azzurra/: rostopicpub
IH2Azzurra/ih2_azzurra/: CMakeLists.txt  package.xml
IH2Azzurra/ih2_azzurra/include/: ih2_azzurra_command.h  ih2_azzurra_driver.h
IH2Azzurra/ih2_azzurra/msg/: AutoGrasp.msg
IH2Azzurra/ih2_azzurra/src/: ih2_azzurra_command.cpp  ih2_azzurra_driver.cpp  ih2_azzurra_driver_old.cpp
MyHand/: README.md
MyHand/mia_hand_driver/: CMakeLists.txt  package.xml
MyHand/mia_hand_driver/include/: mia_autograsp_driver.h  mia_finger_driver.h  mia_ros_driver.h  mia_serial_port.h
MyHand/mia_hand_driver/launch/: mia_launcher.launch
MyHand/mia_hand_driver/src/: mia_autograsp_driver.cpp  mia_finger_driver.cpp  mia_ros_driver.cpp  mia_serial_port.cpp
MyHand/mia_hand_msgs/: CMakeLists.txt  package.xml
MyHand/mia_hand_msgs/msg/: AutoGraspData.msg
app_api/: CMakeLists.txt  package.xml
app_api/script/: api_receiver.py  api_sender.py  tester.py  tester2.py
exos2hand/: CMakeLists.txt  package.xml
exos2hand/launch/: avatar_global_launcher.launch  azzurra_avatar_launcher.launch  comlauncher.launch  mia_avatar_launcher.launch  my_websocket_launcher.launch
exos2hand/src/: exos2azzurra.py  exos2mia.py
jmc_ros_driver/: CMakeLists.txt  README.md  package.xml
jmc_ros_driver/launch/: oculus_demo.launch  start.launch  start.launch.save  start.launch.save.1
jmc_ros_driver/src/: .JMC_driver.py.swo  .JMC_driver.py.swp  JMC_UDP_comm.py  JMC_driver.py  connection_params.py
joystick_to_twist/: CMakeLists.txt  package.xml
joystick_to_twist/launch/: joy_launcher.launch
joystick_to_twist/src/: joy_to_twist.py
launch/: rtabmap.launch
launch/daniele/: dan_realsense.launch  dan_rtabmap_loc.launch
launch/double_camera/: 1_init.launch  2_filter_imu.launch  3_rgbd_conversion.launch  4_rtabmap.launch
localization/: CMakeLists.txt  package.xml
localization/config/: ekf_params.yaml  ukf_params.yaml
localization/launch/: localization.launch
localization/src/: saver.py  saver_imu.py
mastermind/: CMakeLists.txt  package.xml
mastermind/cfg/: imu_covariance.cfg  odom_cov.cfg
mastermind/config/: config_file.rviz  config_file_debug.rviz
mastermind/launch/: .gitignore  0_main.launch  1_init.launch  3_rgbd_conversion.launch  4_rtabmap.launch  5_localization.launch  5_only_VO.launch  6_rtabmap_save_map.launch  7_obstacle_detection.launch  8_rtabmap_performance.launch  main.launch  main_rtab_obs_detect.launch  offline_debug.launch  rs_camera_onlyrgb.launch
mastermind/launch/double_camera/: 1_init.launch  4_rtabmap.launch  5_localization.launch  6_rtabmap_save_map.launch
mastermind/launch/double_camera/tests/: 9_obstacle_detection.launch
mastermind/launch/full_files/: double_camera_full.launch
mastermind/launch/old_stuff/: imu_filter.launch  realsense.launch
mastermind/launch/old_stuff/daniele/: dan_rtabmap.launch
mastermind/launch/old_stuff/full_files/: full_rtab.launch
mastermind/src/: imu_cov.py  odom_cov.py
mastermind/src/maps/: .gitignore
mastermind/urdf/: robot.urdf
mastermind/urdf/meshes/: robot.stl  robot2.stl
navigator/: CMakeLists.txt  package.xml
navigator/config/: DWA_base_local_planner_params.yaml  global_costmap_params.yaml
navigator/launch/: manual_nav.launch
navigator/launch/config/: DWA_base_local_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params_2d.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params_XYZ.yaml
state_machine/: CMakeLists.txt  package.xml
state_machine/launch/: sm_startup.launch  web_services.launch
state_machine/msg/: UDPmessage.msg
state_machine/nodes/: resizer  resizer.save  resizer_old
state_machine/src/: main_sm.py
udp_controller/: CMakeLists.txt  package.xml
udp_controller/cfg/: odom_covariance.cfg
udp_controller/src/: UDP_Azzurra.py  UDP_Mia.py  UDP_Pedal.py  UDP_Receiver.py  UDP_Sender.py  UDP_Sender_head.py  UDP_Sender_head_realigner.py  kinematics_matrix.py  library.py  reset_service.py  server_dynamic_reconfigure.py
udp_controller/srv/: reset_odom.srv
