<?xml version="1.0"?>
<package format="2">
  <name>mia_hand_msgs</name>
  <version>0.0.1</version>
  
  <description>
  	Package containing Mia Hand msg and srv files.
	</description>

  <maintainer email="andreabu@prensilia.com">Andrea Burani</maintainer>

  <license>BSD</license>

  <author email="andreabu@prensilia.com">Andrea Burani</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
